Base HTML and project setup added
Background image
SCSS for colors and commons
Jquery installed
	Base for footer
	Base for header
	# with '#' will be ignored, and an empty message aborts the commit.

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,5 @@
-
-body {
-   background-image: url('../images/background.jpg');
-   color: black;
-}
+@import "reset.scss";
+@import "colors.scss";
+@import "fonts.scss";
+@import "common.scss";
+@import "index.scss";
