--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -6,6 +6,9 @@ $font-color: #FFF;
 $link: #c4aa00;
 $link-hover: #f4cc00;
 
+/* index header title */
+$header-title: #000;
+
 $blue: #252E3A;
 $dark-grey: #9E9E9E;
 $a: #B4B4B4;
