--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -17,6 +17,10 @@ a {
   }
 }
 
+h3 {
+  font-size: 20px;
+}
+
 footer {
 
   ul {
@@ -39,7 +43,7 @@ footer {
       content: "|";
       padding: 0.5em;
     }
-    
+
     li:last-child:after {
       content: "";
     }
