--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,5 @@
-@import "reset.scss";
-@import "colors.scss";
-@import "fonts.scss";
-@import "common.scss";
-@import "index.scss";
+@import 'reset.scss';
+@import 'colors.scss';
+@import 'fonts.scss';
+@import 'common.scss';
+@import 'index.scss';
